--- a/mysite/recommender/static/recommender/medium_screen.css
+++ b/mysite/recommender/static/recommender/medium_screen.css
@@ -71,4 +71,11 @@
     height: 100%;
   }
 
+  .users {
+    width: 90%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 5rem 4rem;
+  }
+
 }
